# ScreenCapture360

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml
core/: recorder.py
docs/: index.css  index.html
scripts/: build_windows.py  file_version_info.txt  installer.iss
ui/: floating_controls.py  main_window.py  screen_selector.py
