[tool.poetry]
package-mode = false

[project]
name = "video-recorder"
version = "0.1.0"
description = "PyQt6 screen recorder application"
authors = [
    {name = "KhowarLabs"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pyqt6 (>=6.6)",
    "mss (>=9.0)",
    "opencv-python (>=4.9)",
    "pygetwindow (>=0.0.9)",
    "numpy (>=1.26)",
    "sounddevice (>=0.4.6)",
    "av (>=11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.19.0,<7.0.0)"
]
